[workspace]
members = [
  'node',
  'node/service',
  'node/cli',
  'node/rpc',
  'node/chain_spec',
  'node/local',
  'utils/ethereum',
  'utils/convertor',
  'utils/currency',
  'utils/dummy',
  'runtime/devnet',
  # 'runtime/gari',
  'pallets/template',
  'pallets/player',
  'pallets/upfront-pool',
  'pallets/pool',
  'pallets/staking-pool',
  'pallets/gafi-tx',
  'pallets/address-mapping',
  'pallets/pallet-faucet',
  'pallets/funding-pool',
  'pallets/pallet-cache',
  'pallets/game-creator',
  'pallets/gafi-membership',
  'pallets/whitelist',
  'tests',
  'primitives',
]
[profile.release]
panic = 'unwind'

evm-core = {git = "https://github.com/grindytech/evm", branch = "master"}

ethereum = {git = "https://github.com/grindytech/ethereum", branch = "master"}

resolver = "2"

[workspace.package]
authors = ["Grindy Technologies <hellp@grindy.io>"]
edition = "2021"
repository = "https://github.com/grindytech/gafi/"

[workspace.dependencies]
bn = {package = "substrate-bn", version = "0.6", default-features = false}
environmental = {version = "1.1.3", default-features = false}
ethereum = {version = "0.14.0", default-features = false}
ethereum-types = {version = "0.14.1", default-features = false}
evm = {version = "0.37.0", default-features = false}
jsonrpsee = "0.16.2"
kvdb-rocksdb = "0.17.0"
libsecp256k1 = "0.7.1"
parity-db = "0.4.2"
rlp = {version = "0.5", default-features = false}
scale-codec = {package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"]}
scale-info = {version = "2.3.1", default-features = false, features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# Substrate Client
sc-basic-authorship = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-block-builder = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-cli = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-client-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-client-db = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus-aura = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus-manual-seal = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-executor = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-finality-grandpa = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-keystore = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-network = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-network-common = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc-api = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-service = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-telemetry = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
# Substrate Primitive
sp-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-block-builder = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus-aura = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-core = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-database = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-finality-grandpa = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-inherents = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-io = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-keyring = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-offchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-runtime = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-session = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-state-machine = {version = "0.13.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-std = {version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-storage = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-timestamp = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-transaction-pool = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-trie = {version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
sp-version = {version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
# Substrate FRAME
frame-benchmarking = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
frame-executive = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
frame-support = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
frame-system = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
frame-system-benchmarking = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
frame-system-rpc-runtime-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-aura = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-balances = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-grandpa = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-sudo = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-timestamp = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-transaction-payment = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-transaction-payment-rpc = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
pallet-transaction-payment-rpc-runtime-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
pallet-utility = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false}
# Substrate Utility
frame-benchmarking-cli = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
prometheus-endpoint = {package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-build-script-utils = {version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-frame-rpc-system = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-test-runtime-client = {version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-wasm-builder = {version = "5.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
# Frontier Client
fc-cli = {version = "1.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-consensus = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-db = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-mapping-sync = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-rpc = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-rpc-core = {version = "1.1.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
# Frontier Primitive
fp-consensus = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-dynamic-fee = {version = "1.0.0", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-ethereum = {version = "1.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-evm = {version = "3.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-rpc = {version = "3.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-self-contained = {version = "1.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-storage = {version = "2.0.0", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
# Frontier FRAME
pallet-base-fee = {version = "1.0.0", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-dynamic-fee = {version = "4.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-ethereum = {version = "4.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm = {version = "6.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm-chain-id = {version = "1.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm-precompile-modexp = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm-precompile-sha3fips = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm-precompile-simple = {version = "2.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
pallet-evm-test-vector-support = {version = "1.0.0-dev", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-hotfix-sufficients = {version = "1.0.0", git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
# Local
